# chunk_wise_data_synthesis

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  pyproject.toml
docs/: DESIGN.md  FRONTEND.md  PLANS.md  PRODUCT_SENSE.md  ROADMAP.md
docs/design-docs/: README.md  chunk-wise-autoregressive-design.md
docs/exec-plans/: README.md
docs/exec-plans/active/: README.md
docs/plans/: 2026-02-14-chunk-wise-autoregressive-design.md  README.md
docs/product-specs/: README.md
docs/references/: README.md
scripts/: run_generation_ab_baseline.py  run_live_openai_generation_pipeline.py  run_live_openai_pipeline.py  validate_docs.py
src/: __init__.py  chunking.py  fidelity.py  generation_pipeline.py  generation_prompting.py  generation_quality.py  generation_state.py  generation_types.py  model.py  openai_backend.py  pipeline.py  prompting.py  tokenizer.py
src/backends/: __init__.py  openai.py
src/core/: __init__.py  config.py  protocols.py  types.py
src/pipelines/: __init__.py  base.py  generation.py  rephrase.py
src/prompts/: __init__.py  base.py  generation.py  rephrase.py
src/quality/: __init__.py  base.py  evaluation.py  fidelity.py  generation.py
src/tokenization/: __init__.py
tests/: path_setup.py  test_backends_api_compat.py  test_chunking.py  test_core_api_compat.py  test_docs_validation.py  test_generation_evaluation.py  test_generation_pipeline.py  test_generation_prompt_compression.py  test_generation_prompting.py  test_generation_quality.py  test_live_data_asset.py  test_live_scripts_cli.py  test_model_compat.py  test_openai_backend.py  test_openai_backend_live.py  test_package_entrypoint.py  test_pipeline.py  test_pipelines_api.py  test_pipelines_compat_api.py  test_prompting.py  test_quality_refactor_api.py  test_tooling_refactor_api.py
tests/fixtures/: generation_eval_cases.json
(+2 files in other folders)
