[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chunk-wise-data-synthesis"
version = "0.1.0"
description = "Minimal chunk-wise autoregressive rephrasing pipeline."
requires-python = ">=3.10"
dependencies = [
  "openai>=1.40.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
  "chunking",
  "fidelity",
  "model",
  "openai_backend",
  "pipeline",
  "prompting",
  "tokenizer",
]
