[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chunk-wise-data-synthesis"
version = "0.1.0"
description = "Minimal chunk-wise autoregressive rephrasing and long-form generation pipelines."
requires-python = ">=3.10"
dependencies = [
  "openai>=1.40.0",
]

[tool.uv]
package = false

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["backends", "core", "pipelines", "prompts", "quality", "tokenization"]
py-modules = [
  "chunking",
  "generation_state",
  "generation_types",
  "model",
]
